-
Question/Request
-
Resolution: Fixed
-
Major
-
None
-
Lustre 2.10.5
-
None
-
9223372036854775807
e2fsprogs-1.42.13.wc6-7 allowed formatting large MDT (16TB) with ^extents. But the new version e2fsprogs-1.44.3.wc1-0 blocks this with error:
mkfs_cmd = mke2fs -j -b 4096 -L nbp16:MDT0000 -m 0 -i 4000000 -t ext4 -J size=4096 -I 1024 -q -O dirdata,uninit_bg,^extents,mmp,dir_nlink,quota,huge_file,flex_bg -E lazy_journal_init -F /dev/mapper/nbp16_1-MDT0 3106406400
Extents MUST be enabled for a 64-bit filesystem. Pass -O extents to rectify.
Is this an issue since we have MDTs created with older version of e2fsporgs and the don't have the "extents" feature enabled.